--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,6 @@
-h1 {
-  color: #3498db;
-  text-align: center;
-}
-
-button {
-  background-color: #2ecc71;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  margin-top: 10px;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-
-
-button:hover {
-  background-color: #27ae60;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 30vh;
-  text-align: center;
+/* In your CSS */
+.avatar {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
 }
