--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,58 @@
-/* In your CSS */
-.avatar {
-  width: 90px;
-  height: 90px;
-  border-radius: 50%;
+.game-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.game-title {
+  font-size: 36px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.game {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.game-board {
+  margin-right: 20px;
+}
+
+.game-info {
+  margin-left: 20px;
+}
+
+.game-info ol {
+  padding-left: 30px;
+}
+
+.game-info button {
+  margin-bottom: 5px;
+  padding: 5px 10px;
+  background-color: #f0f0f0;
+  border: 1px solid #999;
+  cursor: pointer;
+}
+
+.square {
+  width: 35px;
+  height: 35px;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 35px;
+  padding: 0;
+  text-align: center;
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+}
+
+.board-row:after {
+  clear: both;
+  content: '';
+  display: table;
 }
