--- a/src/App.css
+++ b/src/App.css
@@ -20,10 +20,19 @@
 
 .game-board {
   margin-right: 20px;
+  overflow: auto;
+  max-height: 80vh;
+  max-width: 80vw;
+}
+
+.board {
+  display: inline-block;
 }
 
 .game-info {
   margin-left: 20px;
+  overflow-y: auto;
+  max-height: 80vh;
 }
 
 .game-info ol {
@@ -39,11 +48,11 @@
 }
 
 .square {
-  width: 35px;
-  height: 35px;
-  font-size: 24px;
+  width: 25px;
+  height: 25px;
+  font-size: 12px;
   font-weight: bold;
-  line-height: 35px;
+  line-height: 25px;
   padding: 0;
   text-align: center;
   background: #fff;
@@ -55,4 +64,8 @@
   clear: both;
   content: '';
   display: table;
+}
+
+.status {
+  margin-bottom: 10px;
 }
